bug 49172 - Browser fails to respond correctly to a 205 (reset) status. r-dougt, sr-darin.